modules/vpc_app/1-vpc.tf
resource "aws_vpc" "this" {
    cidr_block = var.vpc_cidr_block
  
    enable_dns_support   = true
    enable_dns_hostnames = true
  
    tags = {
      Name = "${var.vpc_name}"
    }
}
